# django-querystring-modify

./: pyproject.toml
.github/workflows/: test.yml
